Bump parent pom to 4.2 with EA changes to annotation processing
Annotation processing needs to be explicitly on in JDK 24 EA builds