@@ -211,6 +211,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
           <useSystemClassLoader>false</useSystemClassLoader>
           <trimStackTrace>false</trimStackTrace>
           <failIfNoTests>false</failIfNoTests>
